--- a/campfire-client/src/components/navbar/Navbar.css
+++ b/campfire-client/src/components/navbar/Navbar.css
@@ -1,30 +1,12 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 70px;
-  background-color: #000000;
-  opacity: 0.2;
-  font-size: 30px;
-  font-family: "Helvetica Neue";
-}
-
-.logo {
-  margin-left: 10px;
-}
-
-.nav-right {
-  display: flex;
-  margin-right: 10px;
-  align-items: center;
-}
-
 a {
   text-decoration: none;
   color: #FFFFFF;
-  margin: 0px 10px 0px 10px;
 }
 
 a:hover {
-  text-decoration: strong;
+  color: darkgrey;
+} 
+
+.MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuButton-3 MuiButton-colorInherit {
+  color: #FFFFFF;
 }
