make index.css global vw and vh, fix appbar room bug where it was displaced

--- a/campfire-client/src/components/home/Home.css
+++ b/campfire-client/src/components/home/Home.css
@@ -17,35 +17,19 @@
   pointer-events: none;
 }
 
-.vid-info { position: absolute; top: 0; right: 0; width: 33%; background: rgba(0,0,0,0.3); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
-.vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
-.vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 @media (min-aspect-ratio: 16/9) {
   .video-foreground { height: 300%; top: -100%; }
 }
 @media (max-aspect-ratio: 16/9) {
   .video-foreground { width: 300%; left: -100%; }
 }
-@media all and (max-width: 600px) {
-.vid-info { width: 50%; padding: .5rem; }
-.vid-info h1 { margin-bottom: .2rem; }
-}
-@media all and (max-width: 500px) {
-.vid-info .acronym { display: none; }
-}
 
 /* front page body config */
 
-body {
-  margin: 0;
-}
-
-:root {
-  display: flex;
+.frontPageContainer {
+  margin-top: 5em;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  background: rgba(16,19,86,0.6),
 }
 
 .frontPageBody {
@@ -70,6 +54,9 @@ h1 {
   font-size: 4em;
   margin-top: 0;
   margin-bottom: 0;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .create-room {
