--- a/campfire-client/src/components/room/Room.css
+++ b/campfire-client/src/components/room/Room.css
@@ -1,16 +1,25 @@
+body {
+  background-color: #003049;
+  display:flex;
+}
+
+/* .App {
+  display: flex;
+  flex-direction: column;
+} */
+
 .container {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  width: 100%;
-  height: 100vh;
-}
-
+  min-width: 100vw;
+} 
 
 .videoPlayer {
   display: flex;
+  height: 100%;
   width: 100%;
-  margin-right: 3em;
+  margin-right: 3em;  
+
 }
 
 img {
@@ -18,10 +27,7 @@ img {
   height: 100%;
 }
 
-.SideBarNav {
- width: 100%;
+.sideBarContainer, sideBar {
+  border-left: 1px solid #f0f0f0;
 }
 
-body {
-  background-color: #003049;
-}
