--- a/campfire-client/src/index.css
+++ b/campfire-client/src/index.css
@@ -1,3 +1,14 @@
 * { 
   font-family: 'Helvetica Neue', sans-serif;
 }
+
+#root, body, .App {
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
+  /* display: flex; 
+  align-items: center;
+  justify-content: space-between; */
+}
