--- a/campfire-client/src/components/room/Room.css
+++ b/campfire-client/src/components/room/Room.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #003049;
-  display:flex;
+  background: rgb(2,0,36);
+  background: linear-gradient(156deg, rgba(2,0,36,1) 1%, rgba(252,191,73,1) 78%, rgba(252,191,73,1) 79%, rgba(214,40,40,1) 100%);
 }
 
 /* .App {
@@ -14,21 +14,60 @@ body {
   min-width: 100vw;
 } 
 
-.sideBarContainer, sideBar {
-  border-left: 1px solid #f0f0f0;
+.sideBarContainer, .sideBar {
+  border-left: 1px solid rgba(225, 225, 225, 0.2);
+  border-top: 1px solid rgba(225, 225, 225, 0.2);
 }
 
-.videoPlayer {
+.player {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.player iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.usersInRoomContainer {
+  list-style-type: none;
+  border-left: 1px solid rgba(225, 225, 225, 0.2);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.2);
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 3%;
+  padding-top: 3%;
+  padding-left: 3%;
+  padding-right: 3%;
+ }
+
+.usersInRoomTitle {
   display: flex;
-  height: 100%;
-  width: 100%;
-  margin-right: 3em;  
-
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  font-family: 'Helvetica Neue';
+  padding: 0;
+  color: #ffffff;
 }
 
-img {
+.userIcon {
+  position: relative;
+  top: 5px;
+  left: 5px;
+}
+
+.usersInRoomList {
+  display: flex;
+  align-self: flex-end;
+  padding: 3%;
   width: 100%;
-  height: 100%;
+  font-size: 1.2em;
 }
 
 
