--- a/campfire-client/src/components/room/sidebar/chatbox/Message.css
+++ b/campfire-client/src/components/room/sidebar/chatbox/Message.css
@@ -1,35 +1,56 @@
-.outerContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #ffffff;
-  font-family: Helvetica;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #FFFFFF;
+  /* background: #FFFFFF; */
   border-radius: 8px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 60%;
   width: 35%;
+  color: #ffffff;
+  font-size: 0.9em;
+}
+
+.outerContainer {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  height: 100%;
+  width: 100%;
+  /* background-color: #ffffff; */
+}
+
+.leftInnerContainer {
+  flex: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 5%;
+  color: white;
+}
+
+.insideContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 /* Message List */
 .messages {
   padding: 5% 0;
-  overflow: auto;
   flex: auto;
+  height: 100%;
+  overflow-y: scroll;
 }
+
 
 /* MessageItem */
 .messageBox {
-  background: #F3F3F3;
+  /* background: #F3F3F3; */
   border-radius: 20px;
-  padding: 5px 20px;
+  padding: 1px 18px;
   color: white;
   display: inline-block;
   max-width: 80%;
@@ -39,7 +60,6 @@
   width: 100%;
   letter-spacing: 0;
   float: left;
-  font-size: 1.1em;
   word-wrap: break-word;
 }
 
@@ -58,7 +78,7 @@
   display: flex;
   align-items: center;
   font-family: Helvetica;
-  color: #828282;
+  color: #ffffff;
   letter-spacing: 0.3px;
 }
 
@@ -92,4 +112,43 @@
 
 .backgroundLight {
   background: #F3F3F3;
+}
+
+/* input */
+.form {
+  display: flex;
+  align-self: flex-end;
+  border-top: 1px solid rgba(225, 225, 225, 0.2);
+  width: 100%;
+  background: none;
+}
+
+.input {
+  border: none;
+  border-radius: 0;
+  padding: 5%;
+  width: 100%;
+  font-size: 1.2em;
+  background: none;
+  color: #ffffff;
+}
+
+input:focus, textarea:focus, select:focus{
+  outline: none;
+  background: none;
+}
+
+::placeholder {
+  color: #ffffff;
+}
+
+.sendButton {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  display: inline-block;
+  border: none;
+  width: 20%;
 }
