make video player responsive, fix chat scroll bug, fix size of sidebar, fix home page margins

--- a/campfire-client/src/components/home/Home.css
+++ b/campfire-client/src/components/home/Home.css
@@ -27,7 +27,7 @@
 /* front page body config */
 
 .frontPageContainer {
-  margin-top: 5em;
+  margin-top: 150px;
   justify-content: center;
   align-items: center;
 }
