--- a/campfire-client/src/components/room/sidebar/chatbox/Message.css
+++ b/campfire-client/src/components/room/sidebar/chatbox/Message.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 760px;
   overflow-y: scroll;
 }
 
@@ -114,13 +114,13 @@
   background: #F3F3F3;
 }
 
-/* input */
 .form {
   display: flex;
   align-self: flex-end;
   border-top: 1px solid rgba(225, 225, 225, 0.2);
-  width: 100%;
   background: none;
+  bottom: 0px;
+  right: 0px;
 }
 
 .input {
