--- a/campfire-client/src/components/home/Home.css
+++ b/campfire-client/src/components/home/Home.css
@@ -53,6 +53,9 @@
 h1 {
   font-size: 4em;
   margin-bottom: 0;
+}
+
+h1 .pgtitle {
   display: flex;
   justify-content: center;
   text-align: center;
