--- a/campfire-client/src/components/room/Room.css
+++ b/campfire-client/src/components/room/Room.css
@@ -1,6 +1,8 @@
 body {
+  /* background: rgb(2,0,36);
+  background: linear-gradient(156deg, rgba(2,0,36,1) 1%, rgba(252,191,73,1) 78%, rgba(252,191,73,1) 79%, rgba(214,40,40,1) 100%); */
   background: rgb(2,0,36);
-  background: linear-gradient(156deg, rgba(2,0,36,1) 1%, rgba(252,191,73,1) 78%, rgba(252,191,73,1) 79%, rgba(214,40,40,1) 100%);
+background: linear-gradient(164deg, rgba(2,0,36,1) 0%, rgba(252,191,73,1) 69%, rgba(252,191,73,1) 76%, rgba(214,40,40,1) 100%);
 }
 
 /* .App {
@@ -19,12 +21,12 @@ body {
   border-top: 1px solid rgba(225, 225, 225, 0.2);
 }
 
-.player {
+/* .player {
   position: relative;
   height: 100%;
   width: 100%;
   padding-bottom: 56.25%;
-  height: 0;
+  height: 900px;
 }
 
 .video-player {
@@ -41,7 +43,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .utilityContainer {
   list-style-type: none;
