--- a/campfire-client/src/components/room/sidebar/chatbox/Message.css
+++ b/campfire-client/src/components/room/sidebar/chatbox/Message.css
@@ -46,8 +46,8 @@
 /* MessageItem */
 .messageBox {
   /* background: #F3F3F3; */
-  border-radius: 20px;
-  padding: 1px 18px;
+  border-radius: 18px;
+  padding: 1px 12px 1px;
   color: white;
   display: inline-block;
   max-width: 80%;
@@ -68,7 +68,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 0 5%;
-  margin-top: 3px;
+  margin-top: 5px;
 }
 
 .sentText {
