--- a/campfire-client/src/components/room/video/Video.css
+++ b/campfire-client/src/components/room/video/Video.css
@@ -1,13 +1,11 @@
 .youtubePlayer {
-  margin-top:25px;
   width: 100%;
   height: 900px;
 }
 
 .player {
   position: relative;
-  height: 0;
-  height: 100%;
+  height: 980px;
   width: 100%;
 }
 
