--- a/campfire-client/src/components/room/Room.css
+++ b/campfire-client/src/components/room/Room.css
@@ -21,29 +21,16 @@ background: linear-gradient(164deg, rgba(2,0,36,1) 0%, rgba(252,191,73,1) 69%, r
   border-top: 1px solid rgba(225, 225, 225, 0.2);
 }
 
-/* .player {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  padding-bottom: 56.25%;
-  height: 900px;
+.__react_component_tooltip {
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-out !important;
+  opacity: 0 !important;
+  visibility: visible;
 }
 
-.video-player {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
+.__react_component_tooltip.show {
+  visibility: visible;
+  opacity: 1 !important;
 }
-
-.player iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
 
 .utilityContainer {
   list-style-type: none;
